...
 * @param onAction the keyboard actions for the input field
 */
@Composable
fun EmailInput(
    modifier: Modifier = Modifier,
    emailState: MutableState<String>,
    labelId: String = "Email",
    enabled: Boolean = true,
    imeAction: ImeAction = ImeAction.Next,
    onAction: KeyboardActions = KeyboardActions.Default
) {
    InputField(
        modifier = modifier,
...
        )
        PasswordInput(
            modifier = Modifier
                .focusRequester(passwordFocusRequest)
                .fillMaxWidth(0.9f),
            passwordState = password,
            labelId = "Password",
            enabled = !loading,
            passwordVisibility = passwordVisibility,
            isCreateAccount = isCreateAccount,
            onAction = KeyboardActions {
                if (!valid) return@KeyboardActions
                onDone(
...
                    email.value.trim(),
                    password.value.trim()
                )
            }
        )
        SubmitButton(
            textId = if (isCreateAccount) "Create Account" else "Login",
            loading = loading,
            validInputs = valid,
        ) {
            onDone(
                firstName.value.trim(),
                lastName.value.trim(),
...
 * @param onAction the keyboard actions for the input field
 */
@Composable
fun FirstNameInput(
    modifier: Modifier = Modifier,
    firstNameState: MutableState<String>,
    labelId: String = "First Name",
    enabled: Boolean = true,
    imeAction: ImeAction = ImeAction.Next,
    onAction: KeyboardActions = KeyboardActions.Default
) {
    InputField(
        modifier = modifier,
...
 * @param onAction the keyboard actions for the input field
 */
@Composable
fun LastNameInput(
    modifier: Modifier = Modifier,
    lastNameState: MutableState<String>,
    labelId: String = "Last Name",
    enabled: Boolean = true,
    imeAction: ImeAction = ImeAction.Next,
    onAction: KeyboardActions = KeyboardActions.Default
) {
    InputField(
        modifier = modifier,
...
