...
                .background(MaterialTheme.colorScheme.primary),
            horizontalArrangement = Arrangement.Center,
            verticalAlignment = Alignment.CenterVertically
        ) {
            val textValue =
                if (showLoginForm.value) "Don't have an account?" else "Have an Account?"
            val text = if (showLoginForm.value) "Sign Up" else "Login"
            Text(
                text = textValue,
                color = MaterialTheme.colorScheme.background
            )
            Text(
                text = text,
...
